--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.13",
         "@types/node": "^20.10.0",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
