--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "^19.1.9",
         "@vitejs/plugin-react-swc": "^3.10.2",
         "autoprefixer": "^10.4.21",
+        "gh-pages": "^6.3.0",
         "postcss": "^8.5.6",
         "prettier": "^3.6.2",
         "tailwindcss": "^4.1.13",
@@ -23,6 +24,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "typecheck": "tsc --noEmit"
+        "ts-check": "tsc --noEmit",
+        "deploy": "gh-pages -d build"
     }
 }
