--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "lucide-react": "^0.544.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
