--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "lucide-react": "^0.544.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "lucide-react": "0.575.0",
+        "react": "19.2.4",
+        "react-dom": "19.2.4"
     },
     "devDependencies": {
-        "@tailwindcss/postcss": "^4.1.13",
-        "@types/node": "^20.10.0",
-        "@types/react": "^19.1.13",
-        "@types/react-dom": "^19.1.9",
-        "@vitejs/plugin-react-swc": "^3.10.2",
-        "autoprefixer": "^10.4.21",
-        "gh-pages": "^6.3.0",
-        "postcss": "^8.5.6",
-        "prettier": "^3.6.2",
-        "tailwindcss": "^4.1.13",
-        "typescript": "^5.9.2",
-        "vite": "7.1.5"
+        "@tailwindcss/postcss": "4.2.1",
+        "@types/node": "25.3.0",
+        "@types/react": "19.2.14",
+        "@types/react-dom": "19.2.3",
+        "@vitejs/plugin-react-swc": "4.2.3",
+        "autoprefixer": "10.4.24",
+        "gh-pages": "6.3.0",
+        "postcss": "8.5.6",
+        "prettier": "3.8.1",
+        "tailwindcss": "4.2.1",
+        "typescript": "5.9.3",
+        "vite": "7.3.1"
     },
     "scripts": {
         "dev": "vite",
