--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-    "name": "continuous-calendar",
-    "description": "Continuous Calendar 2025-2026",
-    "version": "0.1.0",
-    "private": true,
-    "type": "module",
-    "dependencies": {
-        "lucide-react": "0.575.0",
-        "react": "19.2.4",
-        "react-dom": "19.2.4"
-    },
-    "devDependencies": {
-        "@eslint/js": "9.39.3",
-        "@tailwindcss/postcss": "4.2.1",
-        "@types/node": "25.3.0",
-        "@types/react": "19.2.14",
-        "@types/react-dom": "19.2.3",
-        "@vitejs/plugin-react-swc": "4.2.3",
-        "autoprefixer": "10.4.24",
-        "eslint": "9.39.3",
-        "gh-pages": "6.3.0",
-        "postcss": "8.5.6",
-        "prettier": "3.8.1",
-        "tailwindcss": "4.2.1",
-        "typescript": "5.9.3",
-        "typescript-eslint": "8.56.1",
-        "vite": "7.3.1"
-    },
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "ts-check": "tsc --noEmit",
-        "lint": "eslint --fix .",
-        "lint-files": "eslint --fix",
-        "format": "prettier --write --ignore-unknown .",
-        "format-files": "prettier --write --ignore-unknown",
-        "check": "npm run ts-check && npm run lint && npm run format",
-        "deploy": "gh-pages -d build",
-        "deps:latest": "node tools/get-latest-deps.js"
-    }
+  "name": "continuous-calendar",
+  "description": "Continuous Calendar",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "dependencies": {
+    "lucide-react": "0.575.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "9.39.3",
+    "@tailwindcss/postcss": "4.2.1",
+    "@types/node": "25.3.0",
+    "@types/react": "19.2.14",
+    "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react-swc": "4.2.3",
+    "autoprefixer": "10.4.24",
+    "eslint": "9.39.3",
+    "gh-pages": "6.3.0",
+    "postcss": "8.5.6",
+    "prettier": "3.8.1",
+    "tailwindcss": "4.2.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.56.1",
+    "vite": "7.3.1"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "ts-check": "tsc --noEmit",
+    "lint": "eslint --fix .",
+    "lint-files": "eslint --fix",
+    "format": "prettier --write --ignore-unknown .",
+    "format-files": "prettier --write --ignore-unknown",
+    "check": "npm run ts-check && npm run lint && npm run format",
+    "deploy": "gh-pages -d build",
+    "deps:latest": "node tools/get-latest-deps.js"
+  }
 }
