--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.24",
     "eslint": "9.39.3",
     "gh-pages": "6.3.0",
+    "lint-staged": "15.5.0",
     "postcss": "8.5.6",
     "prettier": "3.8.1",
     "tailwindcss": "4.2.1",
@@ -36,6 +37,8 @@
     "format-files": "prettier --write --ignore-unknown",
     "check": "npm run ts-check && npm run lint && npm run format",
     "deploy": "gh-pages -d build",
-    "deps:latest": "node tools/get-latest-deps.js"
+    "deps:latest": "node tools/get-latest-deps.js",
+    "lint-staged": "lint-staged",
+    "postinstall": "cp tools/githooks/* .git/hooks || true"
   }
 }
