--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "format": "prettier --write --ignore-unknown .",
     "format-files": "prettier --write --ignore-unknown",
     "check": "npm run ts-check && npm run lint && npm run format",
-    "deploy": "gh-pages -d build",
+    "deploy": "npm run build && gh-pages -d build",
     "deps:latest": "node tools/get-latest-deps.js",
     "lint-staged": "lint-staged",
     "postinstall": "cp tools/githooks/* .git/hooks || true"
