--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-react-swc": "4.2.3",
     "autoprefixer": "10.4.24",
     "eslint": "9.39.3",
+    "eslint-plugin-simple-import-sort": "12.1.1",
     "gh-pages": "6.3.0",
     "lint-staged": "15.5.0",
     "postcss": "8.5.6",
